--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
         <meta charset="utf-8">
         <title>Guess Who?</title>
         <script src="data.js"></script>
+        <script src="jquery."></script>
         <script src="client.js"></script>
     </head>
+    <header>
     <body>
-        
+</header>
+        <h1>Guess Who?</h1>
+
+        <main id="guessWho"></main>
+
     </body>
 </html>
