--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
         <meta charset="utf-8">
         <title>Guess Who?</title>
         <script src="data.js"></script>
-        <script src="jquery."></script>
+        <script src="jquery.js"></script>
         <script src="client.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <header>
-    <body>
-</header>
-        <h1>Guess Who?</h1>
 
-        <main id="guessWho"></main>
+      <body>
+          <div class="container">
+          	<h1 id="prompt">Guess who? Pick </h1>
 
-    </body>
-</html>
+          	<div id="images">
+
+
+          	</div>
+          </div>
+      </body>
+  </html>
